--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,20 @@ services:
       dockerfile: Dockerfile
     container_name: doc-ops-mcp
     restart: unless-stopped
+    
+    # Security configurations
+    user: "1000:1000"  # Run as non-root user
+    read_only: true     # Read-only root filesystem
+    security_opt:
+      - no-new-privileges:true  # Prevent privilege escalation
+    cap_drop:
+      - ALL  # Drop all capabilities
+    cap_add:
+      - CHOWN  # Only add necessary capabilities
+      - DAC_OVERRIDE
+      - FOWNER
+      - SETGID
+      - SETUID
 
     # Environment variables
     environment:
@@ -21,6 +35,7 @@ services:
       - ./documents:/app/documents:rw
       - ./resources:/app/resources:ro
       - ./temp:/app/temp:rw
+      - /tmp:/tmp:rw  # Writable temp directory
 
     # Networks
     networks:
@@ -54,11 +69,28 @@ services:
     image: nginx:alpine
     container_name: doc-ops-nginx
     restart: unless-stopped
+    
+    # Security configurations
+    user: "101:101"  # Run as nginx user
+    read_only: true   # Read-only root filesystem
+    security_opt:
+      - no-new-privileges:true  # Prevent privilege escalation
+    cap_drop:
+      - ALL  # Drop all capabilities
+    cap_add:
+      - CHOWN
+      - DAC_OVERRIDE
+      - SETGID
+      - SETUID
+      - NET_BIND_SERVICE
+    
     ports:
       - '8080:80'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./documents:/var/www/documents:ro
+      - /var/cache/nginx:/var/cache/nginx:rw  # Writable cache directory
+      - /var/run:/var/run:rw  # Writable run directory
     networks:
       - mcp-network
     depends_on:
